# ParadoxServer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  build.rs  paradox.toml
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml
examples/: sqlite-to-graphql-schema.rs
res/: api.html  api.yaml
src/: auth.rs  config.rs  data.rs  fallback.rs  lib.rs  main.rs  redirect.rs  template.rs
src/api/: adapter.rs  docs.rs  files.rs  graphql.rs  locale.rs  mod.rs  query.rs  rev_lookup.rs  tables.rs
src/api/locale/: mod.rs  query.rs
src/api/rev/: activity.rs  behaviors.rs  common.rs  component_types.rs  data.rs  factions.rs  loot_matrix_index.rs  loot_table_index.rs  missions.rs  mod.rs  object_types.rs  objects.rs  routes.rs  skills.rs
src/api/tables/: mod.rs  query.rs  util.rs
src/data/: fs.rs  locale.rs  mod.rs  skill_system.rs
src/middleware/: cors.rs  mod.rs  public.rs
src/services/: fallback.rs  mod.rs  public.rs  router.rs
src/services/template/: minihb.rs  mod.rs
src/template/: minihb.rs  mod.rs  typed_db.rs
src/typed_db/: mod.rs  typed_rows.rs
