[package]
name = "paradox-server"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"

[dependencies.assembly-core]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "d9cd46b29b7a7e92166b0f23a4082851ed04cffc"

[dependencies.assembly-maps]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "d9cd46b29b7a7e92166b0f23a4082851ed04cffc"

[dependencies.assembly-pack]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "d9cd46b29b7a7e92166b0f23a4082851ed04cffc"

[dependencies.assembly-fdb]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "d9cd46b29b7a7e92166b0f23a4082851ed04cffc"
default-features = false
features = ["serde-derives"]

[dependencies.assembly-xml]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "d9cd46b29b7a7e92166b0f23a4082851ed04cffc"

[dependencies.paradox-typed-db]
git = "https://github.com/Xiphoseer/paradox-typed-db.git"
rev = "032830eb09c492718c926eebf12be4f727d38676"

[dependencies]
base64 = "0.13"
handlebars = "3.5"
pretty_env_logger = "0.4.0"
structopt = "0.3.21"
color-eyre = "0.5.10"
#indexmap = "1"
mapr = "0.8.0"
notify = "5.0.0-pre.13"
openapiv3 = "0.5"
percent-encoding = "2.1.0"
pin-project = "1.0"
regex = "1.4"
serde_yaml = "0.8"
toml = "0.5"
tracing = "0.1"

[dependencies.warp]
version = "0.3.1"
features = ["tls", "multipart", "compression"]
default-features = false

# Holds data in insertion order
[dependencies.linked-hash-map]
version = "0.5.3"
features = ["serde_impl"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies]
openapiv3 = "0.5"
serde_yaml = "0.8"
