[package]
name = "paradox-server"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"

[dependencies.assembly-core]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"

[dependencies.assembly-maps]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"

[dependencies.assembly-pack]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"

[dependencies.assembly-fdb]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"
default-features = false
features = ["serde-derives"]

[dependencies.assembly-xml]
git = "https://github.com/Xiphoseer/assembly_rs.git"
rev = "258fc31e2c50713912f54717871f2915617b7db4"

[dependencies.paradox-typed-db]
git = "https://github.com/Xiphoseer/paradox-typed-db.git"
rev = "c4e35cae3a1eb6ef78c71a88b1fc5865120f3ed7"

[dependencies]
base64 = "0.13"
futures-util = "0.3.21"
pretty_env_logger = "0.4.0"
http = "0.2.2"
http-body = "0.4.5"
mapr = "0.8.0"
notify = "5.0.0"
openapiv3 = "0.5"
percent-encoding = "2.1.0"
pin-project = "1.0"
regex = "1.4"
serde_json = "1.0.83"
serde_yaml = "0.8"
toml = "0.5"
tower-service = "0.3.2"
tracing = "0.1"
form_urlencoded = "1.0.1"

[dependencies.clap]
version = "3.2.16"
features = ["derive"]

[dependencies.hyper]
version = "0.14"
features = ["server", "runtime", "http1", "http2"]

[dependencies.tower]
version = "0.4.1"
features = ["make", "util"]

[dependencies.tower-http]
version = "0.3.4"
features = ["fs", "auth", "trace", "cors"]

[dependencies.color-eyre]
version = "0.6.2"
default-features = false

# Holds data in insertion order
[dependencies.linked-hash-map]
version = "0.5.3"
features = ["serde_impl"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serde]
version = "1"
features = ["derive"]

[build-dependencies]
openapiv3 = "0.5"
serde_yaml = "0.8"
