[package]
name = "paradox-server"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"

[dependencies.assembly-core]
version = "0.3.1"

#[dependencies.assembly-maps]
#git = "https://github.com/LUDevNet/Assembly.git"
#rev = "db25c0f397d7bd0f05354134eb16ae685a7505a4"

[dependencies.assembly-pack]
git = "https://github.com/LUDevNet/Assembly.git"
rev = "e3a3299776852440f4e155284c7280a950ca80d0"
features = ["pki"]

[dependencies.assembly-fdb]
version = "0.1.0"
default-features = false
features = ["serde"]

[dependencies.assembly-xml]
git = "https://github.com/LUDevNet/Assembly.git"
rev = "65b2563c861bcb63714aa1b94198864d6c9c1c93"

[dependencies.paradox-typed-db]
git = "https://github.com/LUDevNet/paradox-typed-db.git"
rev = "0eec23af81caf15ffd483687a2518d8d7bf3070f"

[dependencies]
base64 = "0.20.0"
futures-util = "0.3.25"
pretty_env_logger = "0.4.0"
http = "0.2.8"
http-body = "0.4.5"
mapr = "0.8.0"
notify = "5.0.0"
openapiv3 = "1.0.2"
percent-encoding = "2.2.0"
pin-project = "1.0.12"
regex = "1.7.0"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
toml = "0.5.10"
tower-service = "0.3.2"
tracing = "0.1.37"
form_urlencoded = "1.1.0"
latin1str = "0.1.3"
once_cell = "1.16.0"

[dependencies.clap]
version = "4.0.29"
features = ["derive"]

[dependencies.hyper]
version = "0.14.23"
features = ["server", "runtime", "http1", "http2"]

[dependencies.tower]
version = "0.4.13"
features = ["make", "util"]

[dependencies.tower-http]
version = "0.3.5"
features = ["fs", "auth", "trace", "cors"]

[dependencies.color-eyre]
version = "0.6.2"
default-features = false

[dependencies.tokio]
version = "1.23.0"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serde]
version = "1.0.151"
features = ["derive"]

[build-dependencies]
openapiv3 = "1.0.2"
serde_yaml = "0.9.16"
